AirquipUAT/force-app/main/default/objects/SLA_Config__mdt/SLA_Config__mdt.object-meta.xml
<CustomObject>
    <label>SLA Config</label>
    <pluralLabel>SLA Configs</pluralLabel>
</CustomObject>