AirquipUAT/force-app/main/default/objects/SLA_Config__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>