AirquipUAT/force-app/main/default/objects/SLA_Config__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>