AirquipUAT/force-app/main/default/objects/SLA_Config__mdt/fields/Response_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Minutes__c</fullName>
    <label>Response Time (Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>